--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Pokemon Field Studies</h1>
-            <h2>Inspired by the Ridiculous Pokemon Plot by dsparks: https://gist.github.com/dsparks/3883468</h2>
+            <h2></h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -47,9 +47,9 @@
 
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-pokemon-field-studies" class="anchor" href="#welcome-to-pokemon-field-studies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Pokemon Field Studies.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>In 2013 dspoarks founded Pokemon Field Studies by charting the first 150 pokemon stat differences against a common Pikachu. He Published this as  <a href="http://is-r.tumblr.com/post/46821313005/to-plot-them-is-my-real-test">http://is-r.tumblr.com/post/46821313005/to-plot-them-is-my-real-test</a>.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
