--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Proffessor Maple!</h1>
+        		<h1>Hi there, I'm Professor Maple!</h1>
 				<p>Inspired by the Ridiculous Pokemon Plot by dsparks: https://gist.github.com/dsparks/3883468</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
