--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Pokemon Field Studies</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Professor Maple!</h1>
-				<p>Inspired by the Ridiculous Pokemon Plot by dsparks: https://gist.github.com/dsparks/3883468</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="https://github.com/DaveRGP/Pokemon_FieldStudies">github.com/Pokemon_FieldStudies</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
