Changed template text

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Pokemon Field Studies
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Professor Maple!</h1>
+	<p>Inspired by the Ridiculous Pokemon Plot by dsparks: https://gist.github.com/dsparks/3883468</p>
 </div><!-- /.blurb -->
