--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: Pokemon Field Studies
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Professor Maple!</h1>
-	<p>Inspired by the Ridiculous Pokemon Plot by dsparks: https://gist.github.com/dsparks/3883468</p>
+	<p>Inspired by the Ridiculous Pokemon Plot by dsparks: 
+	<li><a href="https://gist.github.com/dsparks/3883468">gist.github.com/dsparks/3883468</a></li></p>
 </div><!-- /.blurb -->
