edited link formatting

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: Pokemon Field Studies
 <div class="blurb">
 	<h1>Hi there, I'm Professor Maple!</h1>
 	<p>Inspired by the Ridiculous Pokemon Plot by dsparks: 
-	<li><a href="https://gist.github.com/dsparks/3883468">gist.github.com/dsparks/3883468</a></li></p>
+	<a href="https://gist.github.com/dsparks/3883468">gist.github.com/dsparks/3883468</a></p>
 </div><!-- /.blurb -->
